--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -1,530 +1,536 @@
 .top-head {
-  border-right: 1px solid #ccc;
+    border-right: 1px solid #ccc;
 }
 
 .top-head h2 {
-  font-size: 16px;
-  font-weight: 600;
-  color: #ff5722;
-  font-family: robotomedium, sans-serif;
-  margin-bottom: 0;
+    font-size: 16px;
+    font-weight: 600;
+    color: #ff5722;
+    font-family: robotomedium, sans-serif;
+    margin-bottom: 0;
 }
 .top-head a {
-  font-size: 15px;
-  font-weight: 500;
-  color: #000;
-  text-decoration: none;
-  font-family: robotomedium, sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    color: #000;
+    text-decoration: none;
+    font-family: robotomedium, sans-serif;
 }
 .top-head-text h2 {
-  font-size: 14px;
-  font-weight: 600;
-  color: #000;
-  font-family: robotomedium, sans-serif;
-  margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 600;
+    color: #000;
+    font-family: robotomedium, sans-serif;
+    margin-bottom: 0;
 }
 
 .navbar a {
-  font-size: 17px;
-  font-weight: 500;
-  color: #000;
-  text-decoration: none;
-  font-family: robotomedium, sans-serif;
-  margin-bottom: 0;
+    font-size: 17px;
+    font-weight: 500;
+    color: #000;
+    text-decoration: none;
+    font-family: robotomedium, sans-serif;
+    margin-bottom: 0;
 }
 .navbar a:hover {
-  color: #ff5722;
+    color: #ff5722;
 }
 
 .navbar a::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 3px;
-  background: #ff5722;
-  transition: width 0.3s;
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background: #ff5722;
+    transition: width 0.3s;
 }
 
 .navbar a:hover::after {
-  width: 100%;
-  color: #ff5722;
+    width: 100%;
+    color: #ff5722;
 }
 .new-menu-hide {
-  display: none;
+    display: none;
 }
 
 .call-now-nav a {
-  background-color: #ff5722;
-  color: #fff;
-  border: none;
-  padding: 7px 15px;
-  border-radius: 10px;
-  text-decoration: none;
+    background-color: #ff5722;
+    color: #fff;
+    border: none;
+    padding: 7px 15px;
+    border-radius: 10px;
+    text-decoration: none;
 }
 
 .dropdown:hover > .dropdown-menu {
-  display: block;
+    display: block;
 }
 
 .dropdown > .dropdown-toggle:active {
-  /*Without this, clicking will make it sticky*/
-  pointer-events: none;
+    /*Without this, clicking will make it sticky*/
+    pointer-events: none;
 }
 
 /* about  */
 .about-text {
-  padding-right: 50px;
+    padding-right: 50px;
 }
 .about-text h1 {
-  font-size: 32px;
-  font-weight: 600;
-  font-family: robotomedium, sans-serif;
-  padding-bottom: 20px;
+    font-size: 32px;
+    font-weight: 600;
+    font-family: robotomedium, sans-serif;
+    padding-bottom: 20px;
 }
 
 .about-text p {
-  font-size: 17px;
-  font-weight: 400;
-  font-family: robotomedium, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    font-family: robotomedium, sans-serif;
 }
 
 .about-text h1::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 3px;
-  background: #ff5722;
-  transition: width 0.3s;
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background: #ff5722;
+    transition: width 0.3s;
 }
 .about-text h1::after {
-  width: 10%;
-  margin: 10px 0px;
+    width: 10%;
+    margin: 10px 0;
 }
 .about-text-inner {
-  padding-right: 50px;
+    padding-right: 50px;
 }
 .about-text-inner h1 {
-  font-size: 22px;
-  font-weight: 600;
-  font-family: robotomedium, sans-serif;
-  padding-bottom: 20px;
+    font-size: 22px;
+    font-weight: 600;
+    font-family: robotomedium, sans-serif;
+    padding-bottom: 20px;
 }
 .about-text-inner h1::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 3px;
-  background: #ff5722;
-  transition: width 0.3s;
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background: #ff5722;
+    transition: width 0.3s;
 }
 .about-text-inner h1::after {
-  width: 10%;
-  margin: 10px 0px;
+    width: 10%;
+    margin: 10px 0;
 }
 
 .about-text-inner p {
-  font-size: 17px;
-  font-weight: 400;
-  font-family: robotomedium, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    font-family: robotomedium, sans-serif;
 }
 
 /* airline reservation  */
 .airlines-text h2 {
-  font-size: 30px;
-  color: #000;
-  font-weight: 600;
-  margin: 0;
-  font-family: robotomedium, sans-serif;
+    font-size: 30px;
+    color: #000;
+    font-weight: 600;
+    margin: 0;
+    font-family: robotomedium, sans-serif;
 }
 .airlines-text p {
-  font-size: 17px;
-  font-weight: 400;
-  font-family: robotomedium, sans-serif;
-  padding-bottom: 20px;
-  list-style-type: disc;
+    font-size: 17px;
+    font-weight: 400;
+    font-family: robotomedium, sans-serif;
+    padding-bottom: 20px;
+    list-style-type: disc;
 }
 
 .airlines-text ul li {
-  font-size: 22px;
-  font-weight: 600;
-  font-family: robotomedium, sans-serif;
-  padding-bottom: 20px;
-  list-style-type: none;
+    font-size: 22px;
+    font-weight: 600;
+    font-family: robotomedium, sans-serif;
+    padding-bottom: 20px;
+    list-style-type: none;
 }
 .airlines-text ul li ul li {
-  font-size: 17px;
-  font-weight: 400;
-  font-family: robotomedium, sans-serif;
-  padding-bottom: 20px;
-  list-style-type: disc;
+    font-size: 17px;
+    font-weight: 400;
+    font-family: robotomedium, sans-serif;
+    padding-bottom: 20px;
+    list-style-type: disc;
 }
 
 /* slider  */
 .slider-bg {
-  background-image: url("./../Images/slider.webp");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-image: url("./../Images/slider.webp");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .slider-text {
-  padding: 90px 30px;
+    padding: 90px 30px;
 }
 .slider-text h1 {
-  color: #fff;
-  font-family: robotomedium, sans-serif;
-  font-size: 40px;
+    color: #fff;
+    font-family: robotomedium, sans-serif;
+    font-size: 40px;
 }
 .slider-text span {
-  color: #ff5722;
+    color: #ff5722;
 }
 .slider-text p {
-  color: #fff;
-  font-size: 28px;
-  margin-bottom: 0;
-  padding: 15px 0;
+    color: #fff;
+    font-size: 28px;
+    margin-bottom: 0;
+    padding: 15px 0;
 }
 .slider-text-button a {
-  background-color: #ff5722;
-  color: #fff;
-  padding: 10px;
-  border-radius: 10px;
-  text-decoration: none;
+    background-color: #ff5722;
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    text-decoration: none;
 }
 
 /* flight search  */
-.flight-search { 
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 15px;
-  border:  1px solid #ccc;
+.flight-search {
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 15px;
+    border: 1px solid #ccc;
 }
 
 select {
-  padding: 5px 5px;
-  font-size: 17px;
-  width: 100%;
-  outline: none;
-  color: #424242;
-  border: 1px solid #ccc;
+    padding: 5px;
+    font-size: 17px;
+    width: 100%;
+    outline: none;
+    color: #424242;
+    border: 1px solid #ccc;
 }
 
 input[type="date"] {
-  padding: 4px;
-  outline: none;
-  color: #424242;
-  border: 1px solid #ccc;
+    padding: 4px;
+    outline: none;
+    color: #424242;
+    border: 1px solid #ccc;
 }
 input[type="text"] {
-  padding: 4px;
-  outline: none;
-  color: #424242;
-  border: 1px solid #ccc;
+    padding: 4px;
+    outline: none;
+    color: #424242;
+    border: 1px solid #ccc;
 }
 input[type="email"] {
-  padding: 4px;
-  outline: none;
-  color: #424242;
-  border: 1px solid #ccc;
+    padding: 4px;
+    outline: none;
+    color: #424242;
+    border: 1px solid #ccc;
 }
 input[type="number"] {
-  padding: 4px;
-  outline: none;
-  color: #424242;
-  border: 1px solid #ccc;
+    padding: 4px;
+    outline: none;
+    color: #424242;
+    border: 1px solid #ccc;
 }
 
 .search-flight-button input {
-  background-color: #ff5722;
-  text-decoration: none;
-  color: #fff;
-  padding: 10px 17px;
-  border-radius: 15px;
-  border: none;
+    background-color: #ff5722;
+    text-decoration: none;
+    color: #fff;
+    padding: 10px 17px;
+    border-radius: 15px;
+    border: none;
 }
 .form-text1 h2 {
-  font-size: 28px;
-  font-weight: 500;
-  color: #424242;
-  text-decoration: none;
-  font-family: robotomedium, sans-serif;
-  margin-bottom: 0;
+    font-size: 28px;
+    font-weight: 500;
+    color: #424242;
+    text-decoration: none;
+    font-family: robotomedium, sans-serif;
+    margin-bottom: 0;
 }
 label {
-  font-size: 16px;
-  font-weight: 600;
-  color: #424242;
-  text-decoration: none;
-  font-family: robotomedium, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: #424242;
+    text-decoration: none;
+    font-family: robotomedium, sans-serif;
 }
 
 /* best deal  */
 .best-deal {
-  padding: 30px 0px;
+    padding: 30px 0;
 }
 .best-deal h1 {
-  font-size: 30px;
-  color: #000;
-  font-weight: 600;
-  margin: 0;
-  font-family: robotomedium, sans-serif;
+    font-size: 26px;
+    color: #000;
+    font-weight: 600;
+    margin: 0;
+    font-family: robotomedium, sans-serif;
 }
 .best-deal h1::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 3px;
-  background: #ff5722;
-  transition: width 0.3s;
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background: #ff5722;
+    transition: width 0.3s;
 }
 
 .best-deal h1::after {
-  width: 5%;
-  color: #ff5722;
-  margin: 10px 0px;
+    width: 5%;
+    color: #ff5722;
+    margin: 10px 0;
 }
 
 .best-deal-text h3 {
-  font-size: 24px;
-  color: #000;
-  font-weight: 600;
-  font-family: robotomedium, sans-serif;
+    font-size: 24px;
+    color: #000;
+    font-weight: 600;
+    font-family: robotomedium, sans-serif;
 }
 .best-deal-text h5 {
-  font-size: 18px;
-  color: #424242;
-  font-weight: 300;
-  font-family: robotomedium, sans-serif;
+    font-size: 18px;
+    color: #424242;
+    font-weight: 300;
+    font-family: robotomedium, sans-serif;
 }
 .best-deal-text p {
-  font-size: 18px;
-  color: #ff5722;
-  font-family: robotomedium, sans-serif;
+    font-size: 18px;
+    color: #ff5722;
+    font-family: robotomedium, sans-serif;
 }
 
 .confidence {
-  padding: 30px;
+    padding: 30px;
+    height: 235px;
 }
 .confidence i {
-  font-size: 35px;
-  color: #4f9cfd;
+    font-size: 35px;
+    color: #4f9cfd;
 }
 .confidence p {
-  font-size: 17px;
-  color: #424242;
-  font-weight: 300;
-  font-family: robotomedium, sans-serif;
+    font-size: 17px;
+    color: #424242;
+    font-weight: 300;
+    font-family: robotomedium, sans-serif;
 }
 .confidence h2 {
-  font-size: 24px;
-  color: #000;
-  font-weight: 400;
-  font-family: robotomedium, sans-serif;
-  padding: 15px 0px;
-  margin: 0;
+    font-size: 20px;
+    color: #000;
+    font-weight: 700;
+    font-family: robotomedium, sans-serif;
+    padding: 15px 0;
+    margin: 0;
 }
 
 /* great deal  */
 .great-deal-bg {
-  width: 100%;
-  padding: 70px;
-  background-color: #263238;
-  margin: 40px 0px;
+    width: 100%;
+    padding: 70px;
+    background-color: #263238;
+    margin: 40px 0;
 }
 .great-deal-text h4 {
-  color: #fff;
-  font-size: 20px;
-  font-family: robotomedium, sans-serif;
+    color: #fff;
+    font-size: 20px;
+    font-family: robotomedium, sans-serif;
 }
 .great-deal-text h2 {
-  color: #fff;
-  font-size: 36px;
-  padding: 20px 0px;
-  font-family: robotomedium, sans-serif;
+    color: #fff;
+    font-size: 36px;
+    padding: 20px 0;
+    font-family: robotomedium, sans-serif;
 }
 .great-deal-text p {
-  color: #fff;
-  font-size: 16px;
-  font-family: robotomedium, sans-serif;
+    color: #fff;
+    font-size: 16px;
+    font-family: robotomedium, sans-serif;
 }
 
 /* airlines  */
 
 .work-airlines {
-  width: 100%;
-  background-color: #f5f5f5;
+    width: 100%;
+    background-color: #f5f5f5;
 }
 .work-airlines h2 {
-  font-size: 30px;
-  color: #000;
-  font-weight: 600;
-  margin-bottom: 50px;
-  font-family: robotomedium, sans-serif;
+    font-size: 26px;
+    color: #000;
+    font-weight: 600;
+    margin-bottom: 50px;
+    font-family: robotomedium, sans-serif;
 }
 .work-airlines h2::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 3px;
-  background: #ff5722;
-  transition: width 0.3s;
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background: #ff5722;
+    transition: width 0.3s;
 }
 
 .work-airlines h2::after {
-  width: 5%;
-  color: #ff5722;
-  margin: 10px 0px;
+    width: 5%;
+    color: #ff5722;
+    margin: 10px 0;
 }
 
 /* book flight  */
+.welcome-name{
+    font-family: robotomedium, sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+}
 
 .book-flight {
-  border: 1px solid #ccc;
+    border: 1px solid #ccc;
 }
 .book-flight-head {
-  background-color: rgb(1, 17, 109);
+    background-color: rgb(1, 17, 109);
 }
 
 .book-flight-head h1 {
-  color: #fff;
-  font-family: robotomedium, sans-serif;
-  font-size: 22px;
-  text-align: center;
-  text-transform: uppercase;
-  padding: 18px 0px;
+    color: #fff;
+    font-family: robotomedium, sans-serif;
+    font-size: 22px;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 18px 0;
 }
 .book-flight-inner {
-  padding: 33px;
+    padding: 33px;
 }
 
 .book-flight-call a {
-  background-color: green;
-  color: #fff;
-  text-transform: uppercase;
-  padding: 10px 20px;
-  text-decoration: none;
+    background-color: green;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    text-decoration: none;
 }
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
 }
 .flight-img {
-  position: relative;
+    position: relative;
 }
 .flight-text {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  padding: 10px 20px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 10px 20px;
 }
 
 .flight-text h1 {
-  font-size: 30px;
-  color: #fff;
-  font-weight: 900;
-  font-family: robotomedium, sans-serif;
-  text-transform: uppercase;
+    font-size: 30px;
+    color: #fff;
+    font-weight: 900;
+    font-family: robotomedium, sans-serif;
+    text-transform: uppercase;
 }
 
 .flight-text p {
-  font-size: 13px;
-  color: #fff;
-  font-weight: 400;
-  font-family: robotomedium, sans-serif;
+    font-size: 13px;
+    color: #fff;
+    font-weight: 400;
+    font-family: robotomedium, sans-serif;
 }
 
 .cloud {
-  position: absolute;
-  top: 0px;
-  right: -500px;
-  opacity: 0.8;
-  animation: cloud 4s linear 0s infinite reverse;
-  z-index: 99;
+    position: absolute;
+    top: 0;
+    right: -500px;
+    opacity: 0.8;
+    animation: cloud 4s linear 0s infinite reverse;
+    z-index: 99;
 }
 
 @keyframes cloud {
-  from {
-    right: -0%;
-  }
-  to {
-    right: 100%;
-  }
+    from {
+        right: -0%;
+    }
+    to {
+        right: 100%;
+    }
 }
 
 /* footer  */
 
 .footer-bg {
-  background-color: #ff5722;
+    background-color: #ff5722;
 }
 
 .footer-text h2 {
-  color: #fff;
-  font-size: 22px;
-  padding: 20px 0px;
-  font-family: robotomedium, sans-serif;
-  font-weight: 600;
+    color: #fff;
+    font-size: 22px;
+    padding: 20px 0;
+    font-family: robotomedium, sans-serif;
+    font-weight: 600;
 }
 
 .footer-text ul {
-  padding: 0px;
+    padding: 0;
 }
 .footer-text ul li {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 .footer-text ul li a {
-  color: #fff;
-  font-size: 17px;
-  font-family: robotomedium, sans-serif;
-  font-weight: 400;
-  text-decoration: none;
+    color: #fff;
+    font-size: 17px;
+    font-family: robotomedium, sans-serif;
+    font-weight: 400;
+    text-decoration: none;
 }
 .footer-text ul li a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .footer-text p {
-  color: #fff;
-  font-size: 17px;
-  font-family: robotomedium, sans-serif;
-  font-weight: 400;
+    color: #fff;
+    font-size: 17px;
+    font-family: robotomedium, sans-serif;
+    font-weight: 400;
 }
 
 /* privacy policy  */
 
 .privacy-policy {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 .privacy-policy h2 {
-  font-size: 30px;
-  color: #000;
-  font-weight: 600;
-  margin: 0;
-  font-family: robotomedium, sans-serif;
+    font-size: 30px;
+    color: #000;
+    font-weight: 600;
+    margin: 0;
+    font-family: robotomedium, sans-serif;
 }
 
 .privacy-policy li {
-  list-style-type: none;
-  font-size: 22px;
-  font-weight: 700;
-  color: #000;
-  margin-bottom: 10px;
-  font-family: robotomedium, sans-serif;
+    list-style-type: none;
+    font-size: 22px;
+    font-weight: 700;
+    color: #000;
+    margin-bottom: 10px;
+    font-family: robotomedium, sans-serif;
 }
 
 .privacy-policy p {
-  font-size: 16px;
-  font-weight: 400;
-  font-family: robotomedium, sans-serif;
-  color: #000;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: robotomedium, sans-serif;
+    color: #000;
 }
 .privacy-policy-list li {
-  font-size: 16px;
-  font-weight: 400;
-  font-family: robotomedium, sans-serif;
-  color: #000;
-  margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: robotomedium, sans-serif;
+    color: #000;
+    margin-bottom: 10px;
 }
